# pedal.guru

./: .gitignore  .gitmodules  CMakeLists.txt  DIAGRAM.md  README.md
.github/: FUNDING.yml
src/: DataManager.cpp  HIDHandler.cpp  OpenCC.cpp  OpenCC.hpp  OpenCC_.hpp  TaskManager.cpp  opencc.cpp  opencc.h  opencc.hpp  task_manager.cpp
src/API/: OpenStreetMapAPI.cpp
src/Device/: iDevice.hpp
src/Device/Beitian/BN180/: BN180.cpp
src/Device/DIY/: wired_reel_speedometer.cpp
src/Device/Generic/LocationModule/: LocationModule.cpp
src/GUI/: GUI.hpp  GUIDrawer.cpp  GUIDrawer.hpp  GUINavigator.cpp
src/GUI/240x240/: GUI_240x240.cpp
src/GUI/Interface/: DesktopSimulator.hpp  Spi240x240.hpp
src/GUI/Page/: BasePage.cpp  PageAltimetry.cpp  PageDistance.cpp  PageHillsGraph.cpp  PageMap.cpp  PageMapSync.cpp  PageRoute.cpp  PageSummary.cpp  iPage.hpp
src/GUI/Render/: Color.cpp  Image.cpp  Rectangle.cpp  Texture.cpp  Window.cpp  iColor.hpp  iImage.hpp  iRectangle.hpp  iTexture.hpp  iWindow.hpp
src/GUI_/: GUINavigator.cpp
src/GUI_/240x240/: gui_240x240_.hpp
src/GUI_/Page/: PageAltimetry.cpp
src/Helper/: FileHelper.cpp  HTTPHelper.cpp  TextHelper.cpp
src/Model/: Callback.hpp  GPSFixData.hpp  HIDEventType.hpp  MapGrid.hpp  MapTile.hpp  SensorData.hpp  SettingsData.hpp
src/Sensor/: GPS.cpp  iSensor.hpp
src/devices/: iDevice.hpp
src/devices/diy/: wired_reel_speedometer.cpp
src/gui/: gui.h  gui.hpp
src/gui/240x240/: gui.cpp  gui.h  gui_240x240.cpp  gui_240x240.hpp
src/gui/pages/: iPage.hpp
src/sensors/: iSensor.hpp
src/targets/rpi-zero-w/: hal.h
src/targets/rpi_zero_w/: hal_rpi_zero_w.hpp
src/targets/simulator/: hal_simulator.hpp
